# Possumic_AS2525_Host

./: .gitignore  CMakeLists.txt  README.md
components/Possumic_AS2525_HostDriver/: CMakeLists.txt  HostDriver.cmake  Possumic_AS2525_HostDriver.c  Possumic_AS2525_HostDriver.h
components/Possumic_AS2525_HostDriver/host_driver/: host_config.h  user_config.h
components/Possumic_AS2525_HostDriver/host_driver/cmd_api/: host_driver.c  host_driver.h
components/Possumic_AS2525_HostDriver/host_driver/cmd_api/rs6x_7x/: host_mmw_api.h  host_mmw_cmd_api.c  host_mmw_report_api.c
components/Possumic_AS2525_HostDriver/host_driver/porting/: host_port.h
components/Possumic_AS2525_HostDriver/host_driver/porting/esp32c5_idf6.0.2/: port.c  port_io.c  port_log.h  port_os.c  port_spi.c  port_store.c
components/Possumic_AS2525_HostDriver/host_driver/porting/include/: hal_com.h  hal_io.h  hal_log.h  hal_os.c  hal_os.h  hal_store.h
components/Possumic_AS2525_HostDriver/host_driver/porting/psic/: port.c  port_com_no_alloc.c  port_i2c.c  port_io.c  port_log.h  port_os.c  port_spi.c  port_store.c  port_uart_com_irq_thread.c  port_uart_com_isr.c  port_uart_edge.c
components/Possumic_AS2525_HostDriver/host_driver/protocol/burn/: host_brom.c  host_brom.h  host_brom_comm_struct.h  host_burn.c  host_burn.h  host_img_struct.h
components/Possumic_AS2525_HostDriver/host_driver/protocol/hif/: hif_type.h  host_hif.c  host_hif.h  host_hif_tl.c  host_hif_tl.h
components/Possumic_AS2525_HostDriver/host_driver/protocol/llc/: host_llc.c  host_llc.h  host_llc_com_bus.c  host_llc_com_bus.h  (+2 more)
(+5 files in other folders)
